--- a/TouringSpotApp/Info.plist
+++ b/TouringSpotApp/Info.plist
@@ -6,5 +6,7 @@
 	<string></string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
